# physics-informed-flood-segmentation

./: .env.example  .gitignore  README.md  README_datasets.md  pipeline_status.json  pyproject.toml  requirements-terramind.txt  requirements.txt  run_step5p_big_sota_train.ps1  run_step5s_a_bs2_accum4_background.ps1  run_step5s_a_low_data_n50_background.ps1  run_step5s_a_restart_fresh_background.ps1  run_step5s_a_resume_epoch15_background.ps1  run_step5s_a_terramind_l_upernet_corrected_indices_dice.ps1  run_step6b2b_download_copernicus_dem.ps1  run_step6b4_full_dem_alignment.ps1  run_step6c_lambda05_background.ps1  run_step6c_v3_low_data_n50_physics_background.ps1  run_step6c_v3_warmup_background.ps1
configs/: datasets.yaml  local_paths.yaml  sen1floods11.yaml  step5i_matched_terramind_base_unetdecoder_dice_only.yaml  step5s_a_terramind_l_upernet_corrected_indices_dice.yaml  step5s_a_terramind_l_upernet_corrected_indices_dice_bs2_accum4.yaml  step5s_terramind_l_upernet_ce_dice_stub.yaml  step5s_terramind_l_upernet_dice_stub.yaml  step5s_terramind_l_upernet_weighted_ce_dice_stub.yaml  step6c_secondary_finetune_from_5s_a_best_lambda01.yaml  step6c_terramind_l_upernet_dice_topographic_lambda005.yaml  step6c_terramind_l_upernet_dice_topographic_lambda05.yaml  step6c_v2_pure_dice_parity_minirun.yaml  step6c_v2_terramind_l_upernet_dice_topographic_lambda01.yaml  step6c_v2_terramind_l_upernet_dice_topographic_lambda05_warmup.yaml  step6c_v2_terramind_l_upernet_dice_topographic_lambda05_warmup_albu_d4.yaml  step6c_v3_pure_dice_parity_5sa_dataloader.yaml  topographic_loss.yaml  (+2 more)
(+441 files in other folders)
